[package]
name = "powerboxesrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "powerboxesrs"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.20.0"
pyo3 = "0.20.0"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"
