[package]
name = "_powerboxes"
version = "0.2.3"
edition = "2021"
license = "MIT"
readme = "../README.md"
authors = ["Buillaume <guillaume.bertrand@edhec.com>"]
description = "Utility functions to manipulate and compute metrics on boxes"
repository = "https://github.com/Smirkey/powerboxes"
homepage = "https://github.com/Smirkey/powerboxes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_powerboxes"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.19"
numpy = { version = "0.22.0", features = ["nalgebra"] }
powerboxesrs = { version = "0.2.3", path = "../powerboxesrs" }
pyo3 = "0.22.3"


