[package]
name = "_powerboxes"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Buillaume <guillaume.bertrand@edhec.com>"]
description = "Utility functions to manipulate and compute metrics on boxes"
repository = "https://github.com/Smirkey/powerboxes"
homepage = "https://github.com/Smirkey/powerboxes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_powerboxes"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.19"
numpy = "0.27"
pyo3 = "0.27"
powerboxesrs = { path = "../powerboxesrs/" }
ndarray = { version = "0.17.2", features = ["rayon"] }
paste = "1"

[dev-dependencies]
pyo3 = { version = "0.27", features = ["auto-initialize"] }
