[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "powerboxes"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Rust',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
]
license = "MIT"
readme = "README.md"
authors = [{name = "Buillaume", email = "guillaume.bertrand@edhec.com"}]
description = "Utility functions to manipulate and compute metrics on boxes"
repository = "https://github.com/Smirkey/powerboxes"
version = "0.2.0"

[tool.maturin]
python-source = "python"
module-name = "powerboxes._powerboxes"
bindings = "pyo3"
features = ["pyo3/extension-module"]
