[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "powerboxes"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
license = "MIT"
readme = "README.md"
authors = [{name = "Buillaume", email = "guillaume.bertrand@edhec.com"}]
description = "Utility functions to manipulate and compute metrics on boxes"
version = "0.3.0"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://smirkey.github.io/powerboxes/"
Documentation = "https://smirkey.github.io/powerboxes/"
Repository = "https://github.com/Smirkey/powerboxes"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-codspeed>=2.0.0",
    "pytest-cov",
    "pillow",
    "maturin>=1.2,<2.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-autorefs>=0.5",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "mkdocstrings>=0.24",
    "mkdocstrings-python>=1.8",
]

[tool.maturin]
python-source = "python"
module-name = "powerboxes._powerboxes"
bindings = "pyo3"
features = ["pyo3/extension-module"]
