[package]
name = "powerboxesrs"
version = "0.2.3"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Buillaume <guillaume.bertrand@edhec.com>"]
description = "Utility functions to manipulate and compute metrics on boxes"
repository = "https://github.com/Smirkey/powerboxes"
homepage = "https://github.com/Smirkey/powerboxes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "powerboxesrs"
crate-type = ["lib"]

[dependencies]
nalgebra = "0.32.6"
num-traits = "0.2.19"
rstar = "0.12.0"

[dev-dependencies]
codspeed-criterion-compat = "2.3.1"
criterion = "0.5.1"


[[bench]]
name = "bench_iou"
harness = false
