[package]
name = "powerboxesrs"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Buillaume <guillaume.bertrand@edhec.com>"]
description = "Utility functions to manipulate and compute metrics on boxes"
repository = "https://github.com/Smirkey/powerboxes"
homepage = "https://github.com/Smirkey/powerboxes"

[package.metadata.docs.rs]
all-features = true
[lib]
name = "powerboxesrs"
crate-type = ["lib"]

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray"]

[dependencies]
ndarray = { version = ">=0.15, <=0.16", features = ["rayon"], optional = true }
num-traits = "0.2.17"
rayon = "1.8.0"
rstar = "0.11.0"
wide = "0.7"

[dev-dependencies]
codspeed-criterion-compat = "2.3.1"
criterion = "0.5.1"
ndarray = { version = ">=0.15, <=0.16", features = ["rayon"] }


[[bench]]
name = "bench_iou"
harness = false
